fix: equalize spacing for state detail notes

--- a/src/scss/pages/data.scss
+++ b/src/scss/pages/data.scss
@@ -4,10 +4,16 @@
   .state-notes {
     font-size: 0.8rem;
   }
+
+  p {
+    margin-bottom: 0;
+  }
 }
 
 .top-link {
   color: $color-grey-4;
+  margin-top: 1.8rem;
+  display: inline-block;
 }
 
 li {
